use a two column display on wider than 700px

--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,14 @@ footer {
     display: none;
 }
 
+@media (min-width: 700px) {
+    main {
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-gap: 20px;
+    }
+}
+
 section {
     max-width: 400px;
 }
